Initial Files Update

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
     <head>
+        <title>BasketBall Counter App</title>
         <link rel="stylesheet" href="index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <div class="heading">
+            <h1>BasketBall Counter App</h1>
+        </div>
         <div class="container">
             <div class="column">
                 <h3 id="winnerHome" onclick="winnerReveal()">HOME</h3>
