--- a/index.html
+++ b/index.html
@@ -47,4 +47,5 @@
         <button id="btn" onclick="newGame()">NEW GAME</button>
         <script src="index.js"></script>
     </body>
+    <footer>This is Designed By<br><a href="https://www.instagram.com/ankur29feb" target="_blank">ANKUR RAJ</a></footer>
 </html>
